--- a/mobile_hivemind/app/src/main/res/values/strings.xml
+++ b/mobile_hivemind/app/src/main/res/values/strings.xml
@@ -5,4 +5,15 @@
     <string name="title_notifications">Notifications</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string-array name="data_parada_options">
+        <item>12.05.2025</item>
+        <item>13.05.2025</item>
+        <item>14.05.2025</item>
+    </string-array>
+    <string-array name="setor_ala_options">
+        <item>Setor D, Montagem</item>
+        <item>Setor A, Produção</item>
+        <item>Setor B, Qualidade</item>
+    </string-array>
 </resources>
